Fixed text-background overlap
Fixed a problem of text overlapping with background image while on
desktop version

--- a/face.css
+++ b/face.css
@@ -5,6 +5,13 @@
 @media only screen and (min-width: 761px){
   body{
     background-image: url("dat/shinobu.png");
+    background-size: 20%;
+  }
+  main{
+    width: 80%;
+  }
+  .in-block {
+    width: 20%;
   }
 }
 header, .in-block{
